[metadata]
name = RacingTeam
license = MIT
version = 0.0.1
description = Telegram bot for querying routes and departures on the VVO network

[options]
packages = RacingTeam
python_requires = >=3.8
install_requires =
    vvopy
    python-telegram-bot

[options.entry_points]
console_scripts =
    RacingTeam = RacingTeam:main
